--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             padding: 20px;
             text-align: center;
         }
+        header img {
+            max-width: 100px;
+            height: auto;
+        }
         nav {
             display: flex;
             justify-content: center;
@@ -55,6 +59,7 @@
 </head>
 <body>
     <header>
+        <img src="purplehedgehogbanking.jpg" alt="Purple Hedgehog Banking Logo">
         <h1>Welcome to Purple Hedgehog Banking</h1>
         <p>Your trusted partner in financial services</p>
     </header>
