--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <header>
-        <img src="purplehedgehogbanking.jpg" alt="Purple Hedgehog Banking Logo">
+        <img src="./purplehedgehogbanking.jpg" alt="Purple Hedgehog Banking Logo">
         <h1>Welcome to Purple Hedgehog Banking</h1>
         <p>Your trusted partner in financial services</p>
     </header>
