--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
             color: white;
             padding: 20px;
             text-align: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
         header img {
             max-width: 100px;
             height: auto;
+            margin-left: 20px;
         }
         nav {
             display: flex;
@@ -59,9 +63,11 @@
 </head>
 <body>
     <header>
+        <div>
+            <h1>Welcome to Purple Hedgehog Banking</h1>
+            <p>Your trusted partner in financial services</p>
+        </div>
         <img src="./purplehedgehogbanking.jpg" alt="Purple Hedgehog Banking Logo">
-        <h1>Welcome to Purple Hedgehog Banking</h1>
-        <p>Your trusted partner in financial services</p>
     </header>
     <nav>
         <a href="#home">Home</a>
